# occultation_light_curve_simulator

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md  Taskfile.yml  cmdline.c  cmdline.h
cli/: cli.ggo  main.c
occultation_simulator/: CMakeLists.txt  diffraction.c  diffraction.h  listadat.txt  numpy.c  slcio.c  slcio.h
occultation_simulator/spectra/: extraerdatos.m  listadat.txt  listah.txt
test/: DartConfiguration.tcl
tests/: simulator_test.c
